--- a/JsonTranslatorApp/JsonTranslatorApp.csproj
+++ b/JsonTranslatorApp/JsonTranslatorApp.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0-preview.7.24406.2"/>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.0-preview.7.24406.2" PrivateAssets="all"/>
+        <PackageReference Include="PublishSPAforGitHubPages.Build" Version="2.2.0" />
     </ItemGroup>
 
     <ItemGroup>
