--- a/JsonTranslatorApp/JsonTranslatorApp.csproj
+++ b/JsonTranslatorApp/JsonTranslatorApp.csproj
@@ -17,4 +17,8 @@
         <ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="wwwroot\css\bootstrap-icons\bootstrap-icons.min.css" />
+    </ItemGroup>
+
 </Project>
