--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,3 +38,4 @@ jobs:
         with:
           branch: gh-pages
           folder: dist/Web/wwwroot
+          translator-api-key: ${{ secrets.TRANSLATOR_API_KEY }}"
