--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,7 @@ jobs:
         uses: jacobtomlinson/gha-find-replace@v3
         with:
           find: "This is the Azure Translator ApiKey"
-          # replace: ${{ secrets.TRANSLATOR_API_KEY }}
-          replace: "I am the new ApiKey"
+          replace: ${{ secrets.TRANSLATOR_API_KEY }}
           include: "**appsettings.json"
 
       # Install .NET Core SDK
