--- a/JsonTranslatorApp/JsonTranslatorApp.csproj
+++ b/JsonTranslatorApp/JsonTranslatorApp.csproj
@@ -10,9 +10,9 @@
     <ItemGroup>
         <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
         <PackageReference Include="JetBrains.Annotations" Version="2024.2.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0-preview.7.24406.2" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.0-preview.7.24406.2" PrivateAssets="all" />
-        <PackageReference Include="PublishSPAforGitHubPages.Build" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0-rc.1.24452.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.0-rc.1.24452.1" PrivateAssets="all" />
+        <PackageReference Include="PublishSPAforGitHubPages.Build" Version="3.0.0" />
     </ItemGroup>
 
     <ItemGroup>
