--- a/JsonTranslatorApp/JsonTranslatorApp.csproj
+++ b/JsonTranslatorApp/JsonTranslatorApp.csproj
@@ -13,6 +13,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.0-rc.1.24452.1" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.0-rc.1.24452.1" PrivateAssets="all" />
         <PackageReference Include="PublishSPAforGitHubPages.Build" Version="3.0.0" />
+        <PackageReference Include="System.Text.Json" Version="9.0.0-rc.1.24431.7" />
     </ItemGroup>
 
     <ItemGroup>
