--- a/JsonTranslatorApp/JsonTranslatorApp.csproj
+++ b/JsonTranslatorApp/JsonTranslatorApp.csproj
@@ -31,6 +31,11 @@
         </Content>
     </ItemGroup>
 
+
+    <ItemGroup>
+      <Folder Include="Models\LanguageEntries\" />
+    </ItemGroup>
+
       
 
 </Project>
