--- a/LanguageFileTranslatorApp.Tests/LanguageFileTranslatorApp.Tests.csproj
+++ b/LanguageFileTranslatorApp.Tests/LanguageFileTranslatorApp.Tests.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\JsonTranslatorApp\JsonTranslatorApp.csproj" />
+    <ProjectReference Include="..\LanguageFileTranslatorApp\LanguageFileTranslatorApp.csproj" />
   </ItemGroup>
 
 </Project>
